Fix z-index of tablet on adventure page

--- a/public/assets/less/include/layout_member.less
+++ b/public/assets/less/include/layout_member.less
@@ -858,15 +858,21 @@ body {
 		.ship {
 			position: absolute;
 			top: 0;
+			background-color: rgba(0, 0, 0, .3);
 			width: 100%;
 			height: 100%;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			background-color: rgba(0, 0, 0, .3);
 
-			img {
-				height: 80%;
+			.ship-inside,
+			.ship-outside {
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				.ship-img {
+					height: 80%;
+				}
 			}
 		}
 	}
@@ -920,7 +926,6 @@ body {
 		width: 100%;
 		height: 100%;
 		background-color: rgba(0, 0, 0, .3);
-		z-index: 2;
 
 		.tablet {
 			position: relative;
